# ProjectX

./: .gitignore.txt  CMakeLists.txt  Premise  ProgressLog
classes/: animatedsprite.h  game.h  globals.h  graphics.h  input.h  level.cpp  level.h  player.h  scene.h  sceneLayer.h  scene_manager.h  sprite.h  titleScene.h
res/img/: concept.pdn  template_icon.pdn
src/: animatedsprite.cpp  game.cpp  graphics.cpp  input.cpp  main.cpp  player.cpp  scene.cpp  sceneLayer.cpp  sprite.cpp
